--- a/views/mailers/reset_password/reset_password.ejs
+++ b/views/mailers/reset_password/reset_password.ejs
@@ -3,4 +3,4 @@
 
 <p>As you have requested to reset password , here's the URL , please open the same in browser</p>
 
-<a href='http://localhost:8000/password/reset-password?accessToken=<%=accessToken.token%>'>Click here!!</a>
+<a href='https://letsvibein.herokuapp.com/password/reset-password?accessToken=<%=accessToken.token%>'>Click here!!</a>
